--- a/block-BHaacn/assets/stylesheet/style.css
+++ b/block-BHaacn/assets/stylesheet/style.css
@@ -133,7 +133,9 @@ body {
 .item-center {
     align-items: center;
 }
-
+.item-stretch {
+    align-items: stretch;
+}
 
 
 /* columns */
@@ -538,6 +540,62 @@ h1 {
     width: 50%;
 }
 
+@media screen and (max-width:1200px) {
+
+    .container {
+        max-width: 1140px;
+    }
+    .footer li{
+        margin: 3px 10px 5px 0;
+    }
+  
+    .width-25 {
+        max-width: 25%;
+    }
+
+    .justify-around-mobile {
+        justify-content: space-around;
+    }
+
+    footer i {
+        font-size: 3rem !important;
+    }
+    .footer-image {
+        text-align: center;
+        margin-bottom: 3rem;
+    }
+
+    .ms-wrap {
+        flex-wrap: wrap;
+    }
+   
+   /* footer */
+   .dashed-line {
+    height: 5.8rem;
+    bottom: -78%;
+}
+
+}
+@media screen and (max-width:992px) {
+    html {
+        font-size: 14px;
+    }
+
+    .container {
+        max-width: 960px;
+    }
+    .navmenu a {
+        margin-left: 0.75rem;
+        font-size: 1.2rem;
+        color: white;
+    }
+    .dashed-line {
+        height: 8.8rem;
+        bottom: -9.75rem;
+    }
+    
+}
+
 @media screen and (max-width:768px) {
 
 
@@ -619,6 +677,10 @@ h1 {
        font-size: 3rem;
        font-weight: 800;
     }
+    .navmenu a {
+        margin-left: 0;
+        font-size: 3rem;
+    }
     .brand {
   
         font-size: 3rem;
@@ -630,6 +692,7 @@ h1 {
     }
     .nav .btn {
         font-size: 2.5rem;
+        margin-left: 0;
     }
     .header {
         position: fixed;
@@ -698,8 +761,6 @@ h1 {
   
     .footer li{
         margin: 3px 10px 5px 0;
-    
-
     }
   
     .width-25 {
@@ -718,6 +779,16 @@ h1 {
         margin-bottom: 3rem;
     }
 
+
+}
+
+@media screen and (max-width:576px) {
+    html {
+        font-size: 10px;
+    }
+    .container {
+        max-width: 540px;
+    }
 
 }
 
